--- a/style.css
+++ b/style.css
@@ -446,6 +446,13 @@ li {
 #hungryghostlogo img {
   width: 80%;
 }
+#sammylicon img {
+  width: 110%;
+  transform: translatey(-1vh);
+}
+#sammyllogo img {
+  width: 30%;
+}
 #photos {
   display: flex;
 }
@@ -504,7 +511,7 @@ overflow: hidden;
   height: auto;
   padding: 0%;
   white-space: nowrap;
-  z-index: 1002;
+  z-index: 1003;
 }
 #search-bar:focus {
   outline: none;
@@ -1046,6 +1053,12 @@ li {
   }
   #hungryghost img {
     width: 60%
+  }
+    #sammylicon img {
+    width: 63%;
+  }
+  #sammyllogo img {
+    width: 30%;
   }
   #photos {
     display: flex;
