--- a/style.css
+++ b/style.css
@@ -460,6 +460,13 @@ li {
 #conwelllogo img {
   width:30%;
 }
+#gathericon img {
+  width: 110%;
+}
+#gatherlogo img {
+  width: 60%;
+  margin-top: -1%;
+}
 #photos {
   display: flex;
 }
@@ -1072,6 +1079,13 @@ li {
   }
   #conwelllogo img {
     width: 30%;
+  }
+    #gathericon img {
+    width: 65%;
+  }
+  #gatherlogo img {
+    width: 45%;
+    margin-top: -3%;
   }
   #photos {
     display: flex;
