--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ color: rgb(135, 118, 91);
     height: 85%;
     left: 18vw;
     position: absolute;
-    background-image: url(./receipt\ w\ graphics/mobile.png);
+    background-image: url(./receipt\ w\ graphics\ mobile.png);
     background-repeat: no-repeat;
     background-size: contain;
     padding: 7%;
